# awd-sdk

./: .gitignore  README.md
cpp-libawd/: CMakeLists.txt  Makefile
cpp-libawd/include/: skeleton.h
cpp-libawd/lib/: CMakeLists.txt
cpp-libawd/lib/lzma/: CMakeLists.txt
cpp-libawd/lib/zlib/: CMakeLists.txt
cpp-libawd/src/: awd.cc  skeleton.cc  util.cc
